# DetectionTestApp

./: .gitignore  README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ncnn_jni.cpp
app/src/main/java/com/andy/detectiontest/: MainActivity.java  StatsChartView.java
app/src/main/java/com/andy/detectiontest/detection/: DetectionResult.java  ModelConfig.java  ModelManager.java  NCNNDetector.java  NCNNPostProcessor.java  NCNNPreProcessor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
backend/: test_detect_server.py
